update the versions for surefire and failsafe plugins and add an additional argument --illegal-access=permit  to allow all reflection access for third party libraries: