@@ -654,7 +654,6 @@
          </plugin>
          <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.18</version>
             <configuration>
                <includes>
                   <include>**/*UnitTest.java</include>
@@ -814,7 +813,12 @@
          <plugins>
             <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
-               <version>2.18</version>
+               <version>2.22.0</version>
+               <configuration>
+                  <argLine>
+                     --illegal-access=permit
+                  </argLine>
+               </configuration>
             </plugin>
             <plugin>
                <artifactId>maven-install-plugin</artifactId>
@@ -912,7 +916,12 @@
             </plugin>
             <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
-               <version>2.19</version>
+               <version>2.22.0</version>
+               <configuration>
+                  <argLine>
+                     --illegal-access=permit
+                  </argLine>
+               </configuration>
             </plugin>
             <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
